# react-native-quickjs

android/: CMakeLists.txt  build.gradle
cpp/: HostProxy.cpp  HostProxy.h  JSIValueConverter.cpp  QuickJSRuntime.cpp  QuickJSRuntime.h
cpp/quickjs/: COMMIT
cpp/quickjs/include/quickjs/: quickjs.h
cpp/quickjs/src/core/: runtime.c
example/android/: gradle.properties
example/src/: App.tsx
